changed the individual pcs scraper / predicter

--- a/pcs_indv_riders.ipynb
+++ b/pcs_indv_riders.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 254,
    "id": "ca028292",
    "metadata": {},
    "outputs": [],
@@ -27,29 +27,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
-   "id": "d1d00990",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 303,
    "id": "fb02885b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['mike-teunissen',\n",
-       " 'matthew-dinham',\n",
-       " 'pierre-latour',\n",
-       " 'pascal-eenkhoorn',\n",
-       " 'enric-mas']"
+       "['anthony-turgis',\n",
+       " 'soren-kragh-andersen',\n",
+       " 'andreas-kron',\n",
+       " 'davide-ballerini',\n",
+       " 'ruben-fernandez']"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 303,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,12 +80,12 @@
     "    riders, _ = remove_(riders)\n",
     "    return riders\n",
     "\n",
-    "get_riders_tdf(2023)[:5]"
+    "get_riders_tdf(2021)[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 256,
    "id": "c23f0cb3",
    "metadata": {},
    "outputs": [],
@@ -113,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 258,
    "id": "b3a0b89e",
    "metadata": {},
    "outputs": [
@@ -210,134 +202,77 @@
        "      <td>40</td>\n",
        "      <td>15.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>2021-06-28</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>race/tour-de-france/2021/stage-3</td>\n",
-       "      <td>2021 Tour de France | Stage 3</td>\n",
-       "      <td>FR</td>\n",
-       "      <td>2.UWT</td>\n",
-       "      <td>182.9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>2021-06-06</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>race/dauphine/2021/stage-8-points</td>\n",
-       "      <td>2021 Critérium du Dauphiné | Points classifica...</td>\n",
-       "      <td>FR</td>\n",
-       "      <td>2.UWT</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2021-08-31</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>race/renewi-tour/2021/stage-2</td>\n",
-       "      <td>2021 Benelux Tour | Stage 2 (ITT)</td>\n",
-       "      <td>BE</td>\n",
-       "      <td>2.UWT</td>\n",
-       "      <td>11.1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>2021-06-06</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>race/dauphine/2021/stage-8</td>\n",
-       "      <td>2021 Critérium du Dauphiné | Stage 8</td>\n",
-       "      <td>FR</td>\n",
-       "      <td>2.UWT</td>\n",
-       "      <td>147.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>2021-03-22</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>race/volta-a-catalunya/2021/stage-1</td>\n",
-       "      <td>2021 Volta Ciclista a Catalunya | Stage 1</td>\n",
-       "      <td>ES</td>\n",
-       "      <td>2.UWT</td>\n",
-       "      <td>178.4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>62 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          date  rank                            stage_url  \\\n",
-       "8   2021-07-18   5.0          race/tour-de-france/2021/gc   \n",
-       "31  2021-06-06   4.0                race/dauphine/2021/gc   \n",
-       "54  2021-03-28   5.0       race/volta-a-catalunya/2021/gc   \n",
-       "41  2021-05-02  10.0        race/tour-de-romandie/2021/gc   \n",
-       "28  2021-06-27   4.0     race/tour-de-france/2021/stage-2   \n",
-       "..         ...   ...                                  ...   \n",
-       "27  2021-06-28  26.0     race/tour-de-france/2021/stage-3   \n",
-       "30  2021-06-06  10.0    race/dauphine/2021/stage-8-points   \n",
-       "1   2021-08-31  33.0        race/renewi-tour/2021/stage-2   \n",
-       "32  2021-06-06  12.0           race/dauphine/2021/stage-8   \n",
-       "61  2021-03-22  42.0  race/volta-a-catalunya/2021/stage-1   \n",
+       "          date  rank                         stage_url  \\\n",
+       "8   2021-07-18   5.0       race/tour-de-france/2021/gc   \n",
+       "31  2021-06-06   4.0             race/dauphine/2021/gc   \n",
+       "54  2021-03-28   5.0    race/volta-a-catalunya/2021/gc   \n",
+       "41  2021-05-02  10.0     race/tour-de-romandie/2021/gc   \n",
+       "28  2021-06-27   4.0  race/tour-de-france/2021/stage-2   \n",
        "\n",
-       "                                           stage_name nationality  class  \\\n",
-       "8                                 2021 Tour de France          FR  2.UWT   \n",
-       "31                         2021 Critérium du Dauphiné          FR  2.UWT   \n",
-       "54                    2021 Volta Ciclista a Catalunya          ES  2.UWT   \n",
-       "41                              2021 Tour de Romandie          CH  2.UWT   \n",
-       "28                      2021 Tour de France | Stage 2          FR  2.UWT   \n",
-       "..                                                ...         ...    ...   \n",
-       "27                      2021 Tour de France | Stage 3          FR  2.UWT   \n",
-       "30  2021 Critérium du Dauphiné | Points classifica...          FR  2.UWT   \n",
-       "1                   2021 Benelux Tour | Stage 2 (ITT)          BE  2.UWT   \n",
-       "32               2021 Critérium du Dauphiné | Stage 8          FR  2.UWT   \n",
-       "61          2021 Volta Ciclista a Catalunya | Stage 1          ES  2.UWT   \n",
+       "                         stage_name nationality  class  distance  pcs_points  \\\n",
+       "8               2021 Tour de France          FR  2.UWT       NaN         280   \n",
+       "31       2021 Critérium du Dauphiné          FR  2.UWT       NaN         140   \n",
+       "54  2021 Volta Ciclista a Catalunya          ES  2.UWT       NaN         120   \n",
+       "41            2021 Tour de Romandie          CH  2.UWT       NaN          70   \n",
+       "28    2021 Tour de France | Stage 2          FR  2.UWT     183.5          40   \n",
        "\n",
-       "    distance  pcs_points  uci_points  \n",
-       "8        NaN         280       475.0  \n",
-       "31       NaN         140       275.0  \n",
-       "54       NaN         120       180.0  \n",
-       "41       NaN          70        85.0  \n",
-       "28     183.5          40        15.0  \n",
-       "..       ...         ...         ...  \n",
-       "27     182.9           0         0.0  \n",
-       "30       NaN           0         0.0  \n",
-       "1       11.1           0         0.0  \n",
-       "32     147.0           0         0.0  \n",
-       "61     178.4           0         0.0  \n",
-       "\n",
-       "[62 rows x 9 columns]"
+       "    uci_points  \n",
+       "8        475.0  \n",
+       "31       275.0  \n",
+       "54       180.0  \n",
+       "41        85.0  \n",
+       "28        15.0  "
       ]
      },
-     "execution_count": 186,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "wilco = get_rider_results('wilco-kelderman', 2021)\n",
-    "wilco.sort_values('pcs_points', ascending=False)"
+    "wilco.sort_values('pcs_points', ascending=False).head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 390,
+   "id": "7ee55007",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Can also get all info in a column, but that is a lot of info\n",
+    "def get_rider_all_results(rider, season):\n",
+    "    res_0 = get_rider_results(rider, season)\n",
+    "    res_1 = get_rider_results(rider, season-1)\n",
+    "    res_2 = get_rider_results(rider, season-2)\n",
+    "    res = pd.concat([res_0, res_1, res_2])[['stage_url', 'rank']]\n",
+    "    res.drop_duplicates(inplace=True)\n",
+    "    res = res.transpose()\n",
+    "    res.columns = res.iloc[0]\n",
+    "    res['name'] = rider\n",
+    "    res['season'] = season\n",
+    "    return res.drop(labels='stage_url')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 391,
+   "id": "d097b4c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "season = 2023\n",
+    "riders = get_riders_tdf(season)\n",
+    "results = []\n",
+    "for rider in riders:\n",
+    "    results.append(get_rider_all_results(rider, season))\n",
+    "df = pd.concat(results)"
    ]
   },
   {
